--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -28,4 +28,5 @@ jobs:
         with:
           branch: main
           commit_message: Update CHANGELOG
+          push_options: --force
           file_pattern: CHANGELOG.md
